# haskell-with-nixpkgs

./: .travis.yml  Makefile  README.md  build.sh  default.nix  dummy.cabal  env-defaults.sh  ghcjs-build.sh  hydra.json  jobsets.nix  shell.nix  silenced-lazy-ghcjs-build.sh  upd-nix.sh
.github/workflows/: Cabal-Linux.yml  Cabal-macOS.yml  Nixpkgs-GHCJS.yml  Nixpkgs-Linux-additional.yml  Nixpkgs-Linux-main.yml  Nixpkgs-integration.yml  Nixpkgs-macOS.yml  Optional-Nix-dev-env-macOS.yml  Optional-Nix-dev-env-main.yml
ghcjs/: default.nix
src/: Dummy.hs  Replace.hs
