name:                dummy
version:             0.0.0.0

build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Dummy
  build-depends:       base,
                       -- At least some package needed for "withHoogle" to work
                       HUnit
  default-language:    Haskell2010