name:                replace
version:             0.0.0.0

build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Replace
  build-depends:       base,
                       -- At least some package needed for "withHoogle" to work
                       call-stack
  default-language:    Haskell2010